--- a/hello/index.html
+++ b/hello/index.html
@@ -7,6 +7,7 @@
     <body>
         <input type="text" id="data" size="13" style="height:100px; font-size:15pt" value=""><br>
         <input type="button" size="13" value="1" onclick="html2()"></body><br>
+        <input type="button" onclick="location.href='./hello2/index1.html'" value="1のスペース"><br>
         <a href="hello2/index1.html">1</a>
         <a href="hello2/index2.html">2</a>
         <a href="hello2/index3.html">3</a>
