--- a/hello/hello2/index1.html
+++ b/hello/hello2/index1.html
@@ -4,6 +4,8 @@
     </head>
     <body>
         1のスペース<br>
+        <form style="margin-top:0em; margin-bottom:0em">
         <input type="text" id="data" style="width:1000px; height:500px"><br>
+        </form>
     </body>
 </html>
