--- a/hello/index.html
+++ b/hello/index.html
@@ -6,10 +6,9 @@
     </head>
     <body>
         <input type="text" id="data" size="13" style="height:100px; font-size:15pt" value=""><br>
-        <input type="button" size="13" value="1" onclick="html2()"></body><br>
-        <a href="hello2/index1.html">1</a>
-        <a href="hello2/index2.html">2</a>
-        <a href="hello2/index3.html">3</a>
-        <a href="hello2/index4.html">4</a>
+        <input type="button" class="button" onclick="location.href='./hello2/index1.html'" value="1のスペース"><br><br>
+        <input type="button" class="button" onclick="location.href='./hello2/index2.html'" value="2のスペース"><br><br>
+        <input type="button" class="button" onclick="location.href='./hello2/index3.html'" value="3のスペース"><br><br>
+        <input type="button" class="button" onclick="location.href='./hello2/index4.html'" value="4のスペース"><br><br>
     </body>
 </html>
