--- a/hello/hello2/index4.html
+++ b/hello/hello2/index4.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         4のスペース<br>
+        <form style="margin-top:0em; margin-bottom:0em">
         <input type="text" id="data" style="width:1000px; height:500px"><br>
     </body>
 </html>
