--- a/hello/hello2/index4.html
+++ b/hello/hello2/index4.html
@@ -1,10 +1,19 @@
 <html>
     <head>
         <title>4のスペース</title>
+        <script src="index.js"></script>
+        <script>
+            // ローカルストレージからデータを取得して表示
+            var savedData4 = localStorage.getItem('savedData4');
+            document.getElementById('savedData4').innerText = savedData4 || 'No data available';
+        </script>
     </head>
     <body>
         4のスペース<br>
         <form style="margin-top:0em; margin-bottom:0em">
-        <input type="text" id="data" style="width:1000px; height:500px"><br>
+        <textarea id="dataInput4" style="width:1000px; height:500px"></textarea><br>
+        </form>
+        <input type="button" onclick="saveData4()" value="保存"><br><br>
+        <span id="savedData4"></span>
     </body>
 </html>
