--- a/hello/hello2/index4.html
+++ b/hello/hello2/index4.html
@@ -9,7 +9,7 @@
         </script>
     </head>
     <body>
-        4のスペース<br>
+        4のスペース　　　<input type="bottun" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <form style="margin-top:0em; margin-bottom:0em">
         <textarea id="dataInput4" style="width:1000px; height:500px"></textarea><br>
         </form>
