--- a/hello/hello2/index3.html
+++ b/hello/hello2/index3.html
@@ -9,7 +9,7 @@
         </script>
     </head>
     <body>
-        3のスペース　　　<input type="bottun" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        3のスペース　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <form style="margin-top:0em; margin-bottom:0em">
         <textarea id="dataInput3" style="width:1000px; height:500px"></textarea><br>
         </form>
