--- a/hello/index.html
+++ b/hello/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
-        <input type="text" id="data" size="13" style="height:100px; font-size:15pt" value=""><br>
+        <!--<input type="text" id="data" size="13" style="height:100px; font-size:15pt" value=""><br>-->
+        <h1><span style="font-family:'Impact'">場所を選ぶ：</span><h1>
         <input type="button" class="button" onclick="location.href='./hello2/index1.html'" value="1のスペース"><br><br>
         <input type="button" class="button" onclick="location.href='./hello2/index2.html'" value="2のスペース"><br><br>
         <input type="button" class="button" onclick="location.href='./hello2/index3.html'" value="3のスペース"><br><br>
