出力ファイルを追加

--- a/hello/hello2/index1.html
+++ b/hello/hello2/index1.html
@@ -9,11 +9,10 @@
         </script>
     </head>
     <body>
-        1のスペース　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        1のスペース　　　<input type="button" onclick="location.href='index1_1.html'" value="出力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <form style="margin-top:0em; margin-bottom:0em">
         <textarea id="dataInput1" style="width:1000px; height:500px"></textarea><br>
         </form>
         <input type="button" onclick="saveData1()" value="保存"><br><br>
-        <span id="savedData1"></span>
     </body>
 </html>
