--- a/hello/hello2/index4.html
+++ b/hello/hello2/index4.html
@@ -9,11 +9,10 @@
         </script>
     </head>
     <body>
-        4のスペース　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        4のスペース　　　<input type="button" onclick="location.href='index4_4.html'" value="出力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <form style="margin-top:0em; margin-bottom:0em">
         <textarea id="dataInput4" style="width:1000px; height:500px"></textarea><br>
         </form>
         <input type="button" onclick="saveData4()" value="保存"><br><br>
-        <span id="savedData4"></span>
     </body>
 </html>
