--- a/hello/hello2/index2.html
+++ b/hello/hello2/index2.html
@@ -9,11 +9,10 @@
         </script>
     </head>
     <body>
-        2のスペース　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        2のスペース　　　<input type="button" onclick="location.href='index2_2.html'" value="出力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <form style="margin-top:0em; margin-bottom:0em">
         <textarea id="dataInput2" style="width:1000px; height:500px"></textarea><br>
         </form>
         <input type="button" onclick="saveData2()" value="保存"><br><br>
-        <span id="savedData2"></span>
     </body>
 </html>
