--- a/hello/hello2/index3.html
+++ b/hello/hello2/index3.html
@@ -9,11 +9,10 @@
         </script>
     </head>
     <body>
-        3のスペース　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        3のスペース　　　<input type="button" onclick="location.href='index3_3.html'" value="出力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <form style="margin-top:0em; margin-bottom:0em">
         <textarea id="dataInput3" style="width:1000px; height:500px"></textarea><br>
         </form>
         <input type="button" onclick="saveData3()" value="保存"><br><br>
-        <span id="savedData3"></span>
     </body>
 </html>
