入力に戻るボタン追加

--- a/hello/hello2/index3_3.html
+++ b/hello/hello2/index3_3.html
@@ -7,7 +7,7 @@
     <title>Data Storage Demo</title>
 </head>
 <body>
-    <h1>1のスペース</h1><br><br>
+    <h1>3のスペース</h1>　　　<input type="button" onclick="location.href='index3.html'" value="入力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
     <span id="savedData3"></span><br>
 
     <script>
