--- a/hello/hello2/index4_4.html
+++ b/hello/hello2/index4_4.html
@@ -7,7 +7,7 @@
     <title>Data Storage Demo</title>
 </head>
 <body>
-    <h1>1のスペース</h1><br><br>
+    <h1>4のスペース</h1>　　　<input type="button" onclick="location.href='index4.html'" value="入力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
     <span id="savedData4"></span><br>
 
     <script>
