端からの空白、見出しなど

--- a/hello/hello2/index1_1.html
+++ b/hello/hello2/index1_1.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>1のスペース</h1>　　　<input type="button" onclick="location.href='index1.html'" value="入力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+    <div class="i">
     <span id="savedData1"></span><br>
+    </div>
 
     <script>
         // ローカルストレージからデータを取得して表示
