--- a/hello/hello2/index1.html
+++ b/hello/hello2/index1.html
@@ -9,7 +9,7 @@
         </script>
     </head>
     <body>
-        1のスペース　　　<input type="button" onclick="location.href='index1_1.html'" value="出力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        <h1>1のスペース</h1>　　　<input type="button" onclick="location.href='index1_1.html'" value="出力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <form style="margin-top:0em; margin-bottom:0em">
         <textarea id="dataInput1" style="width:1000px; height:500px"></textarea><br>
         </form>
