--- a/hello/hello2/index2_2.html
+++ b/hello/hello2/index2_2.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>2のスペース</h1>　　　<input type="button" onclick="location.href='index2.html'" value="入力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+    <div class="i">
     <span id="savedData2"></span><br>
+    </div>
 
     <script>
         // ローカルストレージからデータを取得して表示
