--- a/hello/hello2/index3_3.html
+++ b/hello/hello2/index3_3.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>3のスペース</h1>　　　<input type="button" onclick="location.href='index3.html'" value="入力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+    <div class="i">
     <span id="savedData3"></span><br>
+    </div>
 
     <script>
         // ローカルストレージからデータを取得して表示
