--- a/hello/hello2/index4_4.html
+++ b/hello/hello2/index4_4.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>4のスペース</h1>　　　<input type="button" onclick="location.href='index4.html'" value="入力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+    <div class="i">
     <span id="savedData4"></span><br>
+    </div>
 
     <script>
         // ローカルストレージからデータを取得して表示
