--- a/hello/hello2/index2_2.html
+++ b/hello/hello2/index2_2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Storage Demo</title>
+    <link rel="stylesheet" href="../index.css" type="text/css">
 </head>
 <body>
     <h1>2のスペース</h1>　　　<input type="button" onclick="location.href='index2.html'" value="入力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
