--- a/hello/hello2/index3.html
+++ b/hello/hello2/index3.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
     <head>
         <title>3のスペース</title>
         <script src="index.js"></script>
@@ -10,9 +11,7 @@
     </head>
     <body>
         <h1>3のスペース</h1>　　　<input type="button" onclick="location.href='index3_3.html'" value="出力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
-        <form style="margin-top:0em; margin-bottom:0em">
         <textarea id="dataInput3" style="width:800px; height:400px"></textarea><br>
-        </form>
         <input type="button" onclick="saveData3()" value="保存"><br><br>
     </body>
 </html>
