--- a/hello/index.html
+++ b/hello/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
+        <header>
+            <h1>プロジェクト実習</h1>
+        </header>
         <!--<input type="text" id="data" size="13" style="height:100px; font-size:15pt" value=""><br>-->
         <h1><span style="font-family:'Impact'">場所を選ぶ：</span><h1>
         <div class="i">
