ヘッダーを付けてみる2

--- a/hello/index.html
+++ b/hello/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
-        <header>
+        <header class="header">
             <h1>プロジェクト実習</h1>
         </header>
         <!--<input type="text" id="data" size="13" style="height:100px; font-size:15pt" value=""><br>-->
