背景色など

--- a/hello/index.html
+++ b/hello/index.html
@@ -8,8 +8,9 @@
         <header class="header">
             <h1>プロジェクト実習</h1>
         </header>
-        <!--<input type="text" id="data" size="13" style="height:100px; font-size:15pt" value=""><br>-->
-        <h1><span style="font-family:'Impact'">場所を選ぶ：</span><h1>
+        <div class="a">
+            <h1><span style="font-family:'Impact'">場所を選ぶ：</span></h1>
+        </div>
         <div class="i">
         <input type="button" class="button" onclick="location.href='./hello2/index1.html'" value="1のスペース"><br><br>
         <input type="button" class="button" onclick="location.href='./hello2/index2.html'" value="2のスペース"><br><br>
