--- a/hello/index.html
+++ b/hello/index.html
@@ -8,9 +8,7 @@
         <header class="header">
             <h1>プロジェクト実習</h1>
         </header>
-        <div class="a">
-            <h1><span style="font-family:'Impact'">場所を選ぶ：</span></h1>
-        </div>
+            <h1><span style="font-family:'Impact'" class="a">場所を選ぶ：</span></h1>
         <div class="i">
         <input type="button" class="button" onclick="location.href='./hello2/index1.html'" value="1のスペース"><br><br>
         <input type="button" class="button" onclick="location.href='./hello2/index2.html'" value="2のスペース"><br><br>
