文字の大きさ

--- a/hello/index.html
+++ b/hello/index.html
@@ -8,7 +8,7 @@
         <header class="header">
             <h1>プロジェクト実習</h1>
         </header>
-            <h1><span style="font-family:'Impact'" class="a">場所を選ぶ：</span></h1>
+            <span style="font-size: 25pt;" class="a">場所を選ぶ：</span>
         <div class="i">
         <input type="button" class="button" onclick="location.href='./hello2/index1.html'" value="1のスペース"><br><br>
         <input type="button" class="button" onclick="location.href='./hello2/index2.html'" value="2のスペース"><br><br>
