--- a/hello/index.html
+++ b/hello/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
     <head>
         <title>プロジェクト実習</title>
         <!--<script src="html.js"></script>-->
