--- a/hello/index.html
+++ b/hello/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <header class="header">
-            <h1>プロジェクト実習</h1>
+            <h1><span style="font-size: 35pt;">プロジェクト実習</span></h1>
         </header>
-            <span style="font-size: 25pt;" class="a">場所を選ぶ：</span>
+            <h1><span style="font-size: 25pt;" class="a">場所を選ぶ：</span></h1>
         <div class="i">
         <input type="button" class="button" onclick="location.href='./hello2/index1.html'" value="1のスペース"><br><br>
         <input type="button" class="button" onclick="location.href='./hello2/index2.html'" value="2のスペース"><br><br>
