--- a/hello/hello2/index2.html
+++ b/hello/hello2/index2.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <title>2のスペース</title>
+        <link rel="stylesheet" href="../index.css" type="text/css">
         <script src="index.js"></script>
         <script>
             // ローカルストレージからデータを取得して表示
@@ -10,7 +11,7 @@
         </script>
     </head>
     <body>
-        <h1>2のスペース</h1>　　　<input type="button" onclick="location.href='index2_2.html'" value="出力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        <h1><div class="a">2のスペース</div></h1>　　　<input type="button" class="bluebutton" onclick="location.href='index2_2.html'" value="出力">　　　<input type="button" class="greenbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <textarea id="dataInput2" style="width:800px; height:400px"></textarea><br>
         <input type="button" onclick="saveData2()" value="保存"><br><br>
     </body>
