--- a/hello/hello2/index2_2.html
+++ b/hello/hello2/index2_2.html
@@ -3,17 +3,16 @@
     <head>
         <title>2のスペース</title>
         <link rel="stylesheet" href="../index.css" type="text/css">
+        <script>
+            // ローカルストレージからデータを取得して表示
+            var savedData2 = localStorage.getItem('savedData2');
+            document.getElementById('savedData2').innerText = savedData2 || 'No data available';
+        </script>
     </head>
     <body>
-        <h1>2のスペース</h1>　　　<input type="button" onclick="location.href='index2.html'" value="入力">　　　<input type="button" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        <h1><div class="a">2のスペース</div></h1>　　　<input type="button" class="pinkbutton" onclick="location.href='index2.html'" value="入力">　　　<input type="button" class="greenbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <div class="i">
             <span id="savedData2"></span><br>
         </div>
-
-        <script>
-        // ローカルストレージからデータを取得して表示
-        var savedData2 = localStorage.getItem('savedData2');
-        document.getElementById('savedData2').innerText = savedData2 || 'No data available';
-        </script>
     </body>
 </html>
