入力、出力ページのボタン

--- a/hello/hello2/index1_1.html
+++ b/hello/hello2/index1_1.html
@@ -3,16 +3,17 @@
     <head>
         <title>1のスペース</title>
         <link rel="stylesheet" href="../index.css" type="text/css">
+    </head>
+    <body>
+        <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="pinkbutton" onclick="location.href='index1.html'" value="入力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        <div class="i">
+            <span id="savedData1"></span><br>
+        </div>
+
         <script>
             // ローカルストレージからデータを取得して表示
             var savedData1 = localStorage.getItem('savedData1');
             document.getElementById('savedData1').innerText = savedData1 || 'No data available';
         </script>
-    </head>
-    <body>
-        <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="pinkbutton" onclick="location.href='index1.html'" value="入力">　　　<input type="button" class="greenbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
-        <div class="i">
-            <span id="savedData1"></span><br>
-        </div>
     </body>
 </html>
