--- a/hello/hello2/index3.html
+++ b/hello/hello2/index3.html
@@ -11,7 +11,7 @@
         </script>
     </head>
     <body>
-        <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="bluebutton" onclick="location.href='index3_3.html'" value="出力">　　　<input type="button" class="greenbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="bluebutton" onclick="location.href='index3_3.html'" value="出力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <textarea id="dataInput3" style="width:800px; height:400px"></textarea><br>
         <input type="button" onclick="saveData3()" value="保存"><br><br>
     </body>
