--- a/hello/hello2/index4_4.html
+++ b/hello/hello2/index4_4.html
@@ -3,16 +3,17 @@
     <head>
         <title>4のスペース</title>
         <link rel="stylesheet" href="../index.css" type="text/css">
+    </head>
+    <body>
+        <h1><div class="a">4のスペース</div></h1>　　　<input type="button" class="pinkbutton" onclick="location.href='index4.html'" value="入力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        <div class="i">
+            <span id="savedData4"></span><br>
+        </div>
+
         <script>
             // ローカルストレージからデータを取得して表示
             var savedData4 = localStorage.getItem('savedData4');
             document.getElementById('savedData4').innerText = savedData4 || 'No data available';
         </script>
-    </head>
-    <body>
-        <h1><div class="a">4のスペース</div></h1>　　　<input type="button" class="pinkbutton" onclick="location.href='index4.html'" value="入力">　　　<input type="button" class="greenbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
-        <div class="i">
-            <span id="savedData4"></span><br>
-        </div>
     </body>
 </html>
