--- a/hello/hello2/index1.html
+++ b/hello/hello2/index1.html
@@ -13,6 +13,6 @@
     <body>
         <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="bluebutton" onclick="location.href='index1_1.html'" value="出力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
         <textarea id="dataInput1" style="width:800px; height:400px"></textarea><br>
-        <input type="button" onclick="saveData1()" value="保存"><br><br>
+        <input type="button" class="purplebutton" onclick="saveData1()" value="保存"><br><br>
     </body>
 </html>
