--- a/hello/hello2/index4.html
+++ b/hello/hello2/index4.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1><div class="a">4のスペース</div></h1>　　　<input type="button" class="bluebutton" onclick="location.href='index4_4.html'" value="出力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
-        <textarea id="dataInput4" style="width:800px; height:400px"></textarea><br>
-        <input type="button" class="purplebutton" onclick="saveData4()" value="保存"><br><br>
+        <textarea id="dataInput4" style="width:800px; height:400px" placeholder="メモを入力"></textarea><br>
+        <div class="a"><input type="button" class="purplebutton" onclick="saveData4()" value="保存"></div><br><br>
     </body>
 </html>
