--- a/hello/hello2/index2.html
+++ b/hello/hello2/index2.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1><div class="a">2のスペース</div></h1>　　　<input type="button" class="bluebutton" onclick="location.href='index2_2.html'" value="出力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
-        <textarea id="dataInput2" style="width:800px; height:400px" placeholder="メモを入力"></textarea><br>
-        <div class="a"><input type="button" class="purplebutton" onclick="saveData2()" value="保存"></div><br><br>
+        <textarea id="dataInput2" class="textarea" style="width:800px; height:400px" placeholder="メモを入力"></textarea><br>
+        <div class="i"><input type="button" class="purplebutton" onclick="saveData2()" value="保存"></div><br><br>
     </body>
 </html>
