背景色など2

--- a/hello/hello2/index4_4.html
+++ b/hello/hello2/index4_4.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1><div class="a">4のスペース</div></h1>　　　<input type="button" class="pinkbutton" onclick="location.href='index4.html'" value="入力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        <div class="m">
         <div class="i">
             <span id="savedData4"></span><br>
+        </div>
         </div>
 
         <script>
