--- a/hello/hello2/index3_3.html
+++ b/hello/hello2/index3_3.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="pinkbutton" onclick="location.href='index3.html'" value="入力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br>
+        <div class="m">
         <div class="i">
             <span id="savedData3"></span><br>
+        </div>
         </div>
 
         <script>
