入力したデータから.諦め

--- a/hello/hello2/index1.html
+++ b/hello/hello2/index1.html
@@ -7,11 +7,7 @@
     </head>
     <body>
         <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index1_1.html'" value="出力"><br><br>
-        <textarea id="dataInput1" class="textarea" style="width:800px; height:400px" value="'saveData1'"></textarea><br>
+        <textarea id="dataInput1" class="textarea" style="width:800px; height:400px" value="メモを入力"></textarea><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData1()" value="保存"></div><br><br>
-
-        <script>
-            var savedData1 = localStorage.getItem('savedData1');
-        </script>
     </body>
 </html>
