--- a/hello/hello2/index1_1.html
+++ b/hello/hello2/index1_1.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../index.css" type="text/css">
     </head>
     <body>
-        <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="pinkbutton" onclick="location.href='index1.html'" value="入力">　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ"><br><br><br>
+        <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index1.html'" value="編集"><br><br><br>
         <div class="m">
         <div class="i">
             <span id="savedData1"></span><br>
