--- a/hello/hello2/index3.html
+++ b/hello/hello2/index3.html
@@ -6,8 +6,15 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index3_3.html'" value="出力"><br><br>
+        <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index3_3.html'" value="完了"><br><br>
         <textarea id="dataInput3" class="textarea" style="width:800px; height:400px" placeholder="メモを入力"></textarea><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData3()" value="保存"></div><br><br>
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var savedData3 = localStorage.getItem('savedData3');
+                document.getElementById('dataInput3').value = savedData3 || '';
+            });
+        </script>
     </body>
 </html>
