--- a/hello/hello2/index1.html
+++ b/hello/hello2/index1.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index1_1.html'" value="完了"><br><br>
+        <input id="dataInput1_1" class="title" style="width: 1200px" placeholder="タイトル"><br><br>
         <textarea id="dataInput1" class="textarea" style="width:1200px; height:500px" placeholder="メモを入力"></textarea><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData1()" value="保存"></div><br><br>
 
@@ -15,6 +16,12 @@
             document.addEventListener('DOMContentLoaded', function() {
                 var savedData1 = localStorage.getItem('savedData1');
                 document.getElementById('dataInput1').value = savedData1 || ''; // 初期値として取得したデータを設定
+            });
+        </script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var savedData1_1 = localStorage.getItem('savedData1_1');
+                document.getElementById('dataInput1_1').value = savedData1_1 || ''; 
             });
         </script>
     </body>
