--- a/hello/hello2/index1_1.html
+++ b/hello/hello2/index1_1.html
@@ -7,12 +7,14 @@
     <body>
         <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index1.html'" value="編集"><br><br><br>
         <div class="t">
-            <span id="savedData1_1"></span><br><br>
+            <div class="1">
+                <span id="savedData1_1"></span><br><br>
+            </div>
         </div>
         <div class="m">
-        <div class="i">
-            <span id="savedData1"></span><br>
-        </div>
+            <div class="i">
+                <span id="savedData1"></span><br>
+            </div>
         </div>
 
         <script>
