--- a/hello/index4_4.html
+++ b/hello/index4_4.html
@@ -2,10 +2,10 @@
 <html lang="ja">
     <head>
         <title>4のスペース</title>
-        <link rel="stylesheet" href="../index.css" type="text/css">
+        <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
-        <h1><div class="a">4のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index4.html'" value="編集"><br><br><br>
+        <h1><div class="a">4のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index4.html'" value="編集"><br><br><br>
         <div class="m">
         <div class="i">
             <span id="savedData4"></span><br>
