--- a/hello/index2.html
+++ b/hello/index2.html
@@ -2,11 +2,11 @@
 <html lang="ja">
     <head>
         <title>2のスペース</title>
-        <link rel="stylesheet" href="../index.css" type="text/css">
+        <link rel="stylesheet" href="index.css" type="text/css">
         <script src="index.js"></script>
     </head>
     <body>
-        <h1><div class="a">2のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index2_2.html'" value="完了"><br><br>
+        <h1><div class="a">2のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index2_2.html'" value="完了"><br><br>
         <textarea id="dataInput2" class="textarea" style="width:1200px; height:500px" placeholder="メモを入力"></textarea><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData2()" value="保存"></div><br><br>
 
