--- a/hello/index3_3.html
+++ b/hello/index3_3.html
@@ -2,10 +2,10 @@
 <html lang="ja">
     <head>
         <title>3のスペース</title>
-        <link rel="stylesheet" href="../index.css" type="text/css">
+        <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
-        <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='../index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index3.html'" value="編集"><br><br><br>
+        <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index3.html'" value="編集"><br><br><br>
         <div class="m">
         <div class="i">
             <span id="savedData3"></span><br>
