--- a/hello/index.html
+++ b/hello/index.html
@@ -10,10 +10,10 @@
         </header>
             <h1><span style="font-size: 25pt;" class="a">場所を選ぶ：</span></h1>
         <div class="i">
-        <input type="button" class="greenbutton" onclick="location.href='.index1_1.html'" value="1のスペース"><br><br>
-        <input type="button" class="greenbutton" onclick="location.href='.index2_2.html'" value="2のスペース"><br><br>
-        <input type="button" class="greenbutton" onclick="location.href='.index3_3.html'" value="3のスペース"><br><br>
-        <input type="button" class="greenbutton" onclick="location.href='.index4_4.html'" value="4のスペース"><br><br>
+        <input type="button" class="greenbutton" onclick="location.href='index1_1.html'" value="1のスペース"><br><br>
+        <input type="button" class="greenbutton" onclick="location.href='index2_2.html'" value="2のスペース"><br><br>
+        <input type="button" class="greenbutton" onclick="location.href='index3_3.html'" value="3のスペース"><br><br>
+        <input type="button" class="greenbutton" onclick="location.href='index4_4.html'" value="4のスペース"><br><br>
         </div>
     </body>
 </html>
