タイトルの出力の仕方

--- a/hello/index1_1.html
+++ b/hello/index1_1.html
@@ -10,7 +10,7 @@
             <div class="i">
                 <span id="savedData1_1"></span>
             </div>
-        </div><br><br>
+        </div><br>
         <div class="m">
             <div class="i">
                 <span id="savedData1"></span>
