--- a/hello/index.html
+++ b/hello/index.html
@@ -10,10 +10,17 @@
         </header>
             <h1><span style="font-size: 25pt;" class="a">場所を選ぶ：</span></h1>
         <div class="i">
-        <input type="button" class="greenbutton" onclick="location.href='index1_1.html'" value="1のスペース"><br><br>
+        <input type="button" id="dataInput1" class="greenbutton" onclick="location.href='index1_1.html'" placeholder="1のスペース"><br><br>
         <input type="button" class="greenbutton" onclick="location.href='index2_2.html'" value="2のスペース"><br><br>
         <input type="button" class="greenbutton" onclick="location.href='index3_3.html'" value="3のスペース"><br><br>
         <input type="button" class="greenbutton" onclick="location.href='index4_4.html'" value="4のスペース"><br><br>
         </div>
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var savedData1_1 = localStorage.getItem('savedData1_1');
+                document.getElementById('dataInput1_1').value = savedData1_1 || 'タイトルなし'; 
+            });
+        </script>
     </body>
 </html>
