--- a/hello/index.html
+++ b/hello/index.html
@@ -10,7 +10,7 @@
         </header>
             <h1><span style="font-size: 25pt;" class="a">場所を選ぶ：</span></h1>
         <div class="i">
-        <input type="button" id="dataInput1" class="greenbutton" onclick="location.href='index1_1.html'" placeholder="1のスペース"><br><br>
+        <input type="button" id="dataInput1_1" class="greenbutton" onclick="location.href='index1_1.html'" placeholder="1のスペース"><br><br>
         <input type="button" class="greenbutton" onclick="location.href='index2_2.html'" value="2のスペース"><br><br>
         <input type="button" class="greenbutton" onclick="location.href='index3_3.html'" value="3のスペース"><br><br>
         <input type="button" class="greenbutton" onclick="location.href='index4_4.html'" value="4のスペース"><br><br>
