--- a/hello/index3.html
+++ b/hello/index3.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index3_3.html'" value="完了"><br><br>
+        <input id="dataInput3_3" class="title" style="width: 1200px" placeholder="タイトル"><br><br>
         <textarea id="dataInput3" class="textarea" style="width:1200px; height:500px" placeholder="メモを入力"></textarea><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData3()" value="保存"></div><br><br>
 
@@ -14,6 +15,12 @@
             document.addEventListener('DOMContentLoaded', function() {
                 var savedData3 = localStorage.getItem('savedData3');
                 document.getElementById('dataInput3').value = savedData3 || '';
+            });
+        </script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var savedData3_3 = localStorage.getItem('savedData3_3');
+                document.getElementById('dataInput3_3').value = savedData3_3 || ''; 
             });
         </script>
     </body>
