--- a/hello/index2_2.html
+++ b/hello/index2_2.html
@@ -6,16 +6,25 @@
     </head>
     <body>
         <h1><div class="a">2のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index2.html'" value="編集"><br><br><br>
+        <div class="t">
+            <div class="i">
+                <span id="savedData2_2"></span>
+            </div>
+        </div><br>
         <div class="m">
-        <div class="i">
-            <span id="savedData2"></span><br>
-        </div>
-        </div>
+            <div class="i">
+                <span id="savedData2"></span>
+            </div>
+        </div><br>
 
         <script>
             // ローカルストレージからデータを取得して表示
             var savedData2 = localStorage.getItem('savedData2');
             document.getElementById('savedData2').innerText = savedData2 || 'No data available';
+        </script>
+        <script>
+            var savedData2_2 = localStorage.getItem('savedData2_2');
+            document.getElementById('savedData2_2').innerText = savedData2_2 || 'タイトルなし';
         </script>
     </body>
 </html>
