--- a/hello/index3_3.html
+++ b/hello/index3_3.html
@@ -6,16 +6,25 @@
     </head>
     <body>
         <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index3.html'" value="編集"><br><br><br>
+        <div class="t">
+            <div class="i">
+                <span id="savedData3_3"></span>
+            </div>
+        </div><br>
         <div class="m">
-        <div class="i">
-            <span id="savedData3"></span><br>
-        </div>
-        </div>
+            <div class="i">
+                <span id="savedData3"></span>
+            </div>
+        </div><br>
 
         <script>
             // ローカルストレージからデータを取得して表示
             var savedData3 = localStorage.getItem('savedData3');
             document.getElementById('savedData3').innerText = savedData3 || 'No data available';
+        </script>
+        <script>
+            var savedData3_3 = localStorage.getItem('savedData3_3');
+            document.getElementById('savedData3_3').innerText = savedData3_3 || 'タイトルなし';
         </script>
     </body>
 </html>
