--- a/hello/index4.html
+++ b/hello/index4.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1><div class="a">4のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index4_4.html'" value="完了"><br><br>
+        <input id="dataInput4_4" class="title" style="width: 1200px" placeholder="タイトル"><br><br>
         <textarea id="dataInput4" class="textarea" style="width:1200px; height:500px" placeholder="メモを入力"></textarea><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData4()" value="保存"></div><br><br>
 
@@ -14,6 +15,12 @@
             document.addEventListener('DOMContentLoaded', function() {
                 var savedData4 = localStorage.getItem('savedData4');
                 document.getElementById('dataInput4').value = savedData4 || '';
+            });
+        </script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                var savedData4_4 = localStorage.getItem('savedData4_4');
+                document.getElementById('dataInput4_4').value = savedData4_4 || ''; 
             });
         </script>
     </body>
