ボタンを押すと色が変わる、他

--- a/hello/index4_4.html
+++ b/hello/index4_4.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
-        <h1><div class="a">4のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index4.html'" value="編集"><br><br><br>
+        <h1><div class="a">4のスペース　　　<div class="d">保存を忘れずに</div></div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index4.html'" value="編集"><br><br><br>
         <div class="t">
             <div class="i">
                 <span id="savedData4_4"></span>
@@ -18,7 +18,6 @@
         </div><br>
 
         <script>
-            // ローカルストレージからデータを取得して表示
             var savedData4 = localStorage.getItem('savedData4');
             document.getElementById('savedData4').innerText = savedData4 || 'No data available';
         </script>
