--- a/hello/index1.html
+++ b/hello/index1.html
@@ -6,7 +6,7 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index1_1.html'" value="完了">　　　<nobr><div class="d">保存を忘れず</div></nobr><br><br>
+        <h1><div class="a">1のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="bluebutton" onclick="location.href='index1_1.html'" value="完了"><br><br>
         <input id="dataInput1_1" class="title" style="width: 1200px" placeholder="タイトル"><br><br>
         <textarea id="dataInput1" class="textarea" style="width:1200px; height:500px" placeholder="メモを入力"></textarea><br><br>
         <div class="i"><input type="button" class="purplebutton" onclick="saveData1()" value="保存"></div>
