--- a/hello/index3_3.html
+++ b/hello/index3_3.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
-        <h1><div class="a">3のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index3.html'" value="編集"><br><br><br>
+        <h1><div class="a">3のスペース　　　<div class="d">保存を忘れずに</div></div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index3.html'" value="編集"><br><br><br>
         <div class="t">
             <div class="i">
                 <span id="savedData3_3"></span>
@@ -18,7 +18,6 @@
         </div><br>
 
         <script>
-            // ローカルストレージからデータを取得して表示
             var savedData3 = localStorage.getItem('savedData3');
             document.getElementById('savedData3').innerText = savedData3 || 'No data available';
         </script>
