保存を促す

--- a/hello/index2_2.html
+++ b/hello/index2_2.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css" type="text/css">
     </head>
     <body>
-        <h1><div class="a">2のスペース　　　<div class="d">保存を忘れずに</div></div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index2.html'" value="編集"><br><br><br>
+        <h1><div class="a">2のスペース</div></h1>　　　<input type="button" class="yellowbutton" onclick="location.href='index.html'" value="ホームへ">　　　<input type="button" class="pinkbutton" onclick="location.href='index2.html'" value="編集"><br><br><br>
         <div class="t">
             <div class="i">
                 <span id="savedData2_2"></span>
