タイトル関係.戻す

--- a/hello/index1_1.html
+++ b/hello/index1_1.html
@@ -17,7 +17,7 @@
             </div>
         </div><br>
 
-        <!--<script>
+        <script>
             // ローカルストレージからデータを取得して表示
             var savedData1 = localStorage.getItem('savedData1');
             document.getElementById('savedData1').innerText = savedData1 || 'No data available';
@@ -25,6 +25,6 @@
         <script>
             var savedData1_1 = localStorage.getItem('savedData1_1');
             document.getElementById('savedData1_1').innerText = savedData1_1 || 'タイトルなし';
-        </script>-->
+        </script>
     </body>
 </html>
