--- a/hello/index.html
+++ b/hello/index.html
@@ -9,7 +9,7 @@
         <header class="header">
             <h1><span style="font-size: 35pt;">プロジェクト実習</span></h1>
         </header>
-            <h1><span style="font-size: 25pt;" class="a">場所を選ぶ：</span></h1>
+            <h1><span style="font-size: 25pt;" class="m">場所を選ぶ：</span></h1>
         <div class="i">
         <input type="button" id="dataInput1_1" class="greenbutton" onclick="location.href='index1_1.html'" placeholder="1のスペース"><br><br>
         <input type="button" id="dataInput2_2" class="greenbutton" onclick="location.href='index2_2.html'" value="2のスペース"><br><br>
