メモなし追加

--- a/hello/index1_1.html
+++ b/hello/index1_1.html
@@ -20,7 +20,7 @@
         <script>
             // ローカルストレージからデータを取得して表示
             var savedData1 = localStorage.getItem('savedData1');
-            document.getElementById('savedData1').innerText = savedData1 || 'No data available';
+            document.getElementById('savedData1').innerText = savedData1 || 'メモなし';
         </script>
         <script>
             var savedData1_1 = localStorage.getItem('savedData1_1');
