--- a/hello/index2_2.html
+++ b/hello/index2_2.html
@@ -19,7 +19,7 @@
 
         <script>
             var savedData2 = localStorage.getItem('savedData2');
-            document.getElementById('savedData2').innerText = savedData2 || 'No data available';
+            document.getElementById('savedData2').innerText = savedData2 || 'メモなし';
         </script>
         <script>
             var savedData2_2 = localStorage.getItem('savedData2_2');
