--- a/hello/index3_3.html
+++ b/hello/index3_3.html
@@ -19,7 +19,7 @@
 
         <script>
             var savedData3 = localStorage.getItem('savedData3');
-            document.getElementById('savedData3').innerText = savedData3 || 'No data available';
+            document.getElementById('savedData3').innerText = savedData3 || 'メモなし';
         </script>
         <script>
             var savedData3_3 = localStorage.getItem('savedData3_3');
