--- a/hello/index4_4.html
+++ b/hello/index4_4.html
@@ -19,7 +19,7 @@
 
         <script>
             var savedData4 = localStorage.getItem('savedData4');
-            document.getElementById('savedData4').innerText = savedData4 || 'No data available';
+            document.getElementById('savedData4').innerText = savedData4 || 'メモなし';
         </script>
         <script>
             var savedData4_4 = localStorage.getItem('savedData4_4');
